fixed image names and markup errors

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
             <article class="service-preview">
               <img src="img/service-1.jpg" alt="Service photo 1" class="service-preview-image">
               <a href="#" class="service-preview-link">
-                Эксклюзивное обслуживание
+                <h3 class="service-preview-title">
+                  Эксклюзивное обслуживание
+                </h3> 
               </a>
               <p class="service-preview-descr">
                 Равным образом постоянный количественный рост и&nbsp;сфера нашей активности
@@ -158,7 +160,9 @@
             <article class="service-preview">
               <img src="img/service-2.jpg" alt="Service photo 2" class="service-preview-image">
               <a href="#" class="service-preview-link">
-                Сауны, бассейны, бани, фитнес-залы
+                <h3 class="service-preview-title">
+                  Сауны, бассейны, бани, фитнес-залы
+                </h3> 
               </a>
               <p class="service-preview-descr">
                 Не&nbsp;следует, однако забывать, что начало повседневной работы по&nbsp;формированию позиции
@@ -169,7 +173,9 @@
             <article class="service-preview">
               <img src="img/service-3.jpg" alt="Service photo 3" class="service-preview-image">
               <a href="#" class="service-preview-link">
-                Аренда банкетных залов
+                <h3 class="service-preview-title">
+                  Аренда банкетных залов
+                </h3>  
               </a>
               <p class="service-preview-descr">
                 Значимость этих проблем настолько очевидна, что дальнейшее развитие различных форм
@@ -180,7 +186,9 @@
             <article class="service-preview">
               <img src="img/service-4.jpg" alt="Service photo 4" class="service-preview-image">
               <a href="#" class="service-preview-link">
-                Охраняемые автомобильные стоянки
+                <h3 class="service-preview-title">
+                  Охраняемые автомобильные стоянки
+                </h3>
               </a>
               <p class="service-preview-descr">
                 Не&nbsp;следует, однако забывать, что начало повседневной работы по&nbsp;формированию позиции
@@ -399,17 +407,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>4&nbsp;698&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                4&nbsp;698&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/grey star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/grey-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -427,17 +435,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>5&nbsp;148&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                5&nbsp;148&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/grey star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/grey-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -455,17 +463,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;254&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;254&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -483,17 +491,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;320&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;320&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -511,17 +519,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;457&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;457&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/grey star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/grey-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -539,17 +547,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;320&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;320&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/grey star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/grey-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -567,17 +575,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;505&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;505&nbsp;
+              </h3> 
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 5 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -595,17 +603,17 @@
               <p class="placement-preview-text mod-text-1">
                 от
               </p>
-              <p class="placement-preview-text price">
-                <strong>6&nbsp;824&nbsp;</strong>
-              </p>
+              <h3 class="placement-preview-title">
+                6&nbsp;824&nbsp;
+              </h3>
               <p class="placement-preview-text mod-text-2">
                 / ночь
               </p>
-              <img src="img/yellow star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/yellow star.svg" alt="" class="placement-preview-image-star">
-              <img src="img/grey star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="Рейтинг отеля 4 из 5" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/yellow-star.svg" alt="" class="placement-preview-image-star">
+              <img src="img/grey-star.svg" alt="" class="placement-preview-image-star">
               <p class="placement-preview-text mod-text-2">
                 Lagoona mentira piadosa
               </p>
@@ -620,20 +628,20 @@
           <li class="placement-item">
             <article class="placement-preview">
               <img src="img/placement-9.jpg" alt="Placement photo 9" class="placement-preview-image">
-              <p class="placement-preview-text mod-text-3">
+              <h3 class="placement-preview-title mod-title">
                 Посмотреть все варианты
-              </p>
+              </h3>
             </article>
           </li>
         </ul>
       </div>
     </section>
     <!-- <section id="contacts" class="contacts"> -->
-      <div class="container">
+      <!-- <div class="container">
         <h2 class="section-title contacts-title">
           Контакты
         </h2>
-      </div>
+      </div> -->
     <!-- </section> -->
   </main>
 </body>
